fix contrast error

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -488,7 +488,7 @@ nav {
   margin-left: 5px;
   text-decoration: none;
   font-size: 1.1rem;
-  color: rgb(177, 6, 6);
+  color: rgb(15, 1, 68);
 }
 
 .image {
